tests/ui/impl_trait_for_type.stderr
error: unexpected impl, expected something like `impl UniquePtr<T> {}`
 --> tests/ui/impl_trait_for_type.rs:7:10
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
7 |     impl UniquePtrTarget for S {}
  |          ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
